--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -26,7 +26,7 @@
   font-family: $accent-font;
   color: $white;
   margin: .2em 0;
-  font-size: 3em;
+  font-size: 2em;
 }
 
 .search-wrap {
@@ -276,6 +276,7 @@
     /* Because of the font this requires a teeny tweak*/
     position: relative;
     top: 15px;
+    font-size: 3em;
   }
 
   .toolbar {
